<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/theme_background"
    tools:context=".Register">

    <ImageView
        android:layout_width="86dp"
        android:layout_height="115dp"
        android:background="@drawable/rounded_corner"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/createAccount"
        android:layout_marginBottom="5dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="27sp"/>

    <TextView
        android:text="@string/username"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameReg"
            android:padding="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="@string/email2"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailReg"
            android:padding="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="@string/password2"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordReg"
            android:padding="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_tnp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/tnp"
        android:textStyle="bold"
        tools:ignore="SmallSp" />

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/register"
        android:layout_width="73dp"
        android:layout_height="30dp"
        android:textSize="18sp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:gravity="center" />

    <TextView
        android:textStyle="italic"
        android:gravity="center"
        android:textSize="13sp"
        android:layout_marginTop="25dp"
        android:id="@+id/loginNow"
        android:textColor="@color/black"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>




















