<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/theme_background"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/previousPage"
            android:layout_width="30dp"
            android:layout_height="47dp"
            android:layout_marginStart="10dp"
            android:scaleX="-1"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="Settings"
            android:textSize="32sp"
            android:textStyle="italic" />
    </LinearLayout>
    <ImageView
        android:layout_width="86dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corner"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:src="@drawable/account_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/account_information"
            android:layout_marginEnd="10dp"
            android:textSize="17sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/accountInformation"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="125dp"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customize"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/bell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/reminder_settings"
            android:textSize="17sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/reminderSettings"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="155dp"
            android:src="@drawable/arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="37dp"
            android:layout_height="29dp"
            android:src="@drawable/pinlock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Pin Lock"
            android:textSize="17sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/pinLock"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="236dp"
            android:src="@drawable/arrow"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SAI"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">


        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/help"
            android:textSize="17sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/help"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="285dp"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/term_of_service"
            android:textSize="17sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/termOfService"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="205dp"
            android:src="@drawable/arrow"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:text="@string/privacy_policy"
            android:textSize="17sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/privacyPolicy"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="218dp"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="80dp"
        android:id="@+id/logout"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:background="@drawable/button"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:gravity="center" />

</LinearLayout>




















