<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/theme_background"
    android:id="@+id/layout1"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backSettings"
            android:layout_width="30dp"
            android:layout_height="47dp"
            android:layout_marginStart="10dp"
            android:scaleX="-1"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/account_information"
            android:textSize="32sp"
            android:textStyle="italic" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="120dp"
            android:text="@string/username2"
            android:textSize="17sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/usernameShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="17sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/changeUsername"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/user_id"
            android:textSize="17sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/userIdShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/password"
            android:layout_marginRight="155dp"
            android:textSize="17sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/passwordShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="17sp"
            android:textStyle="italic" />
        <ImageView
            android:id="@+id/changePassword"
            android:layout_width="30dp"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/box"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="110dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/email"
            android:textSize="17sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/emailShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="17sp"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>




















